--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "framer-motion": "^12.18.1",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^19.1.0",
